this commit adds div with class center

--- a/project.html
+++ b/project.html
@@ -5,7 +5,9 @@
     <title>Independent Project</title>
   </head>
   <body>
+    <div class="center">
     <h1>ARIEL SINKEET SOLONKA</h1>
     <img src="me.jpg" alt="my picture">
+    </div>
   </body>
 </html>
