this commit enlists my first project

--- a/project.html
+++ b/project.html
@@ -8,6 +8,11 @@
     <div class="center">
     <h1>ARIEL SINKEET SOLONKA</h1>
     <img src="me.jpg" alt="my picture">
+    <h2>Here are some of the projects I have done with the help of Moringa School</h2>
+    <ul>
+      <li>My first website</li>
+      <p></p>
+    </ul>
     </div>
   </body>
 </html>
