this commit explains my first project

--- a/project.html
+++ b/project.html
@@ -10,8 +10,8 @@
     <img src="me.jpg" alt="my picture">
     <h2>Here are some of the projects I have done with the help of Moringa School</h2>
     <ul>
-      <li>My first website</li>
-      <p></p>
+      <li>My first webpagee</li>
+      <p>It is a simple webpage which I first created when I came to Moringa school. It describes lightly my purpose at Moringa and it includes a link to Moringa School.</p>
     </ul>
     </div>
   </body>
