--- a/project.html
+++ b/project.html
@@ -10,8 +10,10 @@
     <img src="me.jpg" alt="my picture">
     <h2>Here are some of the projects I have done with the help of Moringa School</h2>
     <ul>
-      <li>My first webpagee</li>
-      <p>It is a simple webpage which I first created when I came to Moringa school. It describes lightly my purpose at Moringa and it includes a link to Moringa School.</p>
+      <li>My first webpage</li>
+      <p>It is a simple webpage which I first created when I came to Moringa school. It describes lightly my purpose at Moringa and it includes a link to Moringa School and a link to my second project</p>
+      <p>I created it when learning the basics of HTML and CSS. You can check it out here https://github.com/solonka/first-webpage.git</p>
+      <li></li>
     </ul>
     </div>
   </body>
