this commit enlists my second project

--- a/project.html
+++ b/project.html
@@ -13,7 +13,7 @@
       <li>My first webpage</li>
       <p>It is a simple webpage which I first created when I came to Moringa school. It describes lightly my purpose at Moringa and it includes a link to Moringa School and a link to my second project</p>
       <p>I created it when learning the basics of HTML and CSS. You can check it out <a href= "https://github.com/solonka/first-webpage.git">here</p>
-      <li></li>
+      <li>Resort</li>
     </ul>
     </div>
   </body>
