this commit explains my second project

--- a/project.html
+++ b/project.html
@@ -14,6 +14,8 @@
       <p>It is a simple webpage which I first created when I came to Moringa school. It describes lightly my purpose at Moringa and it includes a link to Moringa School and a link to my second project</p>
       <p>I created it when learning the basics of HTML and CSS. You can check it out <a href= "https://github.com/solonka/first-webpage.git">here</p>
       <li>Resort</li>
+      <p>It is a simple webpage meant to be used by a hotel. It is meant to let people know of the hotel's services wherever they are.</p>
+      <p>In it there are several pages linked. </p>
     </ul>
     </div>
   </body>
