--- a/project.html
+++ b/project.html
@@ -16,6 +16,7 @@
       <li>Resort</li>
       <p>It is a simple webpage meant to be used by a hotel. It is meant to let people know of the hotel's services wherever they are.</p>
       <p>In it there are several pages linked. You can check it out <a href="https://github.com/solonka/resort.git">here</p>
+      <li>Trave ageny</li>
     </ul>
     </div>
   </body>
