--- a/project.html
+++ b/project.html
@@ -9,15 +9,18 @@
     <h1>ARIEL SINKEET SOLONKA</h1>
     <img src="me.jpg" alt="my picture">
     <h2>Here are some of the projects I have done with the help of Moringa School</h2>
-    <ul>
-      <li>My first webpage</li>
-      <p>It is a simple webpage which I first created when I came to Moringa school. It describes lightly my purpose at Moringa and it includes a link to Moringa School and a link to my second project</p>
-      <p>I created it when learning the basics of HTML and CSS. You can check it out <a href= "https://github.com/solonka/first-webpage.git">here</a>.</p>
-      <li>Resort</li>
-      <p>It is a simple webpage meant to be used by a hotel. It is meant to let people know of the hotel's services wherever they are.</p>
-      <p>In it there are several pages linked. You can check it out <a href="https://github.com/solonka/resort.git">here</p>
-      <li>Trave ageny</li>
-    </ul>
+    <dl>
+      <dt>My first webpage</dt>
+      <dd>It is a simple webpage which I first created when I came to Moringa school. It describes lightly my purpose at Moringa and it includes a link to Moringa School and a link to my second project</p>
+      <dd>I created it when learning the basics of HTML and CSS. You can check it out <a href= "https://github.com/solonka/first-webpage.git">here</a>.</dd>
+      <dt>Resort</dt>
+      <dd>It is a simple webpage meant to be used by a hotel. It is meant to let people know of the hotel's services wherever they are.</dd>
+      <dd>In it there are several pages linked. You can check it out <a href="https://github.com/solonka/resort.git">here</a></dd>
+      <dt>Travel ageny</dt>
+      <dd>It is a simple project meant for a travel agency. I created it when practicing the use of class in HTML.</dd>
+      
+
+    </dl>
     </div>
   </body>
 </html>
