this commit adds a link to my third project

--- a/project.html
+++ b/project.html
@@ -18,7 +18,7 @@
       <dd>In it there are several pages linked. You can check it out <a href="https://github.com/solonka/resort.git">here</a></dd>
       <dt>Travel ageny</dt>
       <dd>It is a simple project meant for a travel agency. I created it when practicing the use of class in HTML.</dd>
-      
+      <dd>Here is a <a href="https://github.com/solonka/travel_agency.git">link</a>.</dd>
 
     </dl>
     </div>
