this commit adds about myself

--- a/project.html
+++ b/project.html
@@ -15,12 +15,19 @@
       <dd>I created it when learning the basics of HTML and CSS. You can check it out <a href= "https://github.com/solonka/first-webpage.git">here</a>.</dd>
       <dt>Resort</dt>
       <dd>It is a simple webpage meant to be used by a hotel. It is meant to let people know of the hotel's services wherever they are.</dd>
-      <dd>In it there are several pages linked. You can check it out <a href="https://github.com/solonka/resort.git">here</a></dd>
-      <dt>Travel ageny</dt>
+      <dd>In it there are several pages linked.It uses HTML and CSS. You can check it out <a href="https://github.com/solonka/resort.git">here</a></dd>
+      <dt>Travel agency</dt>
       <dd>It is a simple project meant for a travel agency. I created it when practicing the use of class in HTML.</dd>
-      <dd>Here is a <a href="https://github.com/solonka/travel_agency.git">link</a>.</dd>
-
+      <dd>It uses HTML and CSS. Here is a <a href="https://github.com/solonka/travel_agency.git">link</a>.</dd>
     </dl>
+    <h2>About Me</h2>
+    <p>I am a student persuing Electrical Engineering. I decided to come to Moringa since I am very much intrested in coding.
+      </p>
+    <p>My hobbies are:</p>
+    <ul>
+      <li>Playing football</li>
+      <li>Reading</li>
+    </ul>
     </div>
   </body>
 </html>
