--- a/project.html
+++ b/project.html
@@ -11,7 +11,7 @@
     <h2>Here are some of the projects I have done with the help of Moringa School</h2>
     <dl>
       <dt>My first webpage</dt>
-      <dd>It is a simple webpage which I first created when I came to Moringa school. It describes lightly my purpose at Moringa and it includes a link to Moringa School and a link to my second project</p>
+      <dd>It is a simple webpage which I first created when I came to Moringa school. It describes lightly my purpose at Moringa and it includes a link to Moringa School and a link to my second project</dd>
       <dd>I created it when learning the basics of HTML and CSS. You can check it out <a href= "https://github.com/solonka/first-webpage.git">here</a>.</dd>
       <dt>Resort</dt>
       <dd>It is a simple webpage meant to be used by a hotel. It is meant to let people know of the hotel's services wherever they are.</dd>
