this commit adds span

--- a/project.html
+++ b/project.html
@@ -21,7 +21,7 @@
       <dd>It uses HTML and CSS. Here is a <a href="https://github.com/solonka/travel_agency.git">link</a>.</dd>
     </dl>
     <h2>About Me</h2>
-    <p>I am a student persuing Electrical Engineering. I decided to come to Moringa since I am very much intrested in coding.
+    <p>I am a student persuing Electrical Engineering. I decided to come to <span class="grey">Moringa</span> since I am very much intrested in coding.
       </p>
     <p>My hobbies are:</p>
     <ul>
